Fixed mapToRange function Stopped image drag mouse movement rounding to zero Reworked SpinnerSliderPaired Removed most uses of MathUtil.doublePrecision because using numbers instead of string format produces inequitable values. Fixed rotation guide not showing for negative values.